2010-06-05  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: confirm that a valid access token has been
	retrieved.
	(twittering-oauth-make-response-alist): do not decode a null entry.
	(twittering-verify-credentials): confirm that the retrieved
	`token-alist' is valid as an access token.

2010-06-04  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: removed (set-terminal-coding-system 'utf-8)
	(twittering-mode-map): changed key bindings:
	twittering-public-timeline: C-c C-g -> C-c C-p,
	twittering-set-current-hashtag: C-c C-h -> C-c C-t
	

2010-06-03  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: add encrypted oauth consumer key/secret
	(twittering-auth-method): changed default value to 'oauth
	(twittering-oauth-get-access-token): give users a choise to open
	authrization URL with browser or not when
	twittering-oauth-invoke-browser is nil.

2010-06-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use `twittering-oauth-use-ssl' instead of
	`twittering-use-ssl' on functions for OAuth.
	(twittering-oauth-use-ssl): add docstring.
	(twittering-oauth-get-response-alist): use
	`twittering-oauth-use-ssl' instead of `twittering-use-ssl'.
	(twittering-oauth-get-token-alist-native): likewise.
	(twittering-oauth-get-token-alist-curl): likewise.
	(twittering-verify-credentials): likewise.

	* twittering-mode.el: Restore window parameters after automatic
	redisplaying.
	(twittering-current-window-config): new function.
	(twittering-restore-window-config-after-modification): new function.
	(twittering-redisplay-status-on-each-buffer): restore window
	parameters after redisplaying.

	* twittering-mode.el: Suppress automatic redisplaying if
	unnecessary.
	(twittering-redisplay-status-on-each-buffer): do not modify buffer
	if updated string is same as the current string in the meaning of
	`string='.
	(twittering-make-icon-string): give different strings for
	displayed and undisplayed icon.
